fixed the styling issue with forecast temperatures on mobile

--- a/src/components/ForecastWeather/ForecastWeather.css
+++ b/src/components/ForecastWeather/ForecastWeather.css
@@ -86,14 +86,17 @@
 }
 
 @media screen and (max-width: 950px) {
+    .day__temperature  {
+        width: 40%;
+    }
+
     .day__temperature-percentage {
-        width: 3rem;
-        height: 1rem;
+        width: 5rem;
+        height: 0.5rem;
         margin: 0 0.5rem 0 0.5rem;
     }
 
 }
-
 
 
 @media screen and (max-width: 750px) {
@@ -109,17 +112,12 @@
         width: 100px;
     }
 
-    .day__temperature-percentage {
-        width: 50px;
-        height: 10px;
-    }
-
     .details__condition-image {
         width: 75px;
     }
 
     .day__temperature  {
-        width: 100px;
+        width: 125px;
     }
 
     .details__condition-uv {
@@ -131,4 +129,8 @@
         width: 90%;
     }
 
+    .day__temperature-percentage {
+        width: 500px;
+        height: 10px;
+    }
 }
